--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,57 @@
-# Compiled class file
-*.class
+## emacs ##
+*~
 
-# Log file
-*.log
+# mac files
 
-# BlueJ files
-*.ctxt
+.DS_Store
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Stryker reports
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+frontend/.stryker-tmp
+frontend/reports
+frontend/strykerTmp
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Don't check in a built storybook #
+
+frontend/storybook-static
+
+# If a package-lock.json shows up in top level dir, don't store it in github
+# Only keep the one under frontend/
+
+package-lock.json
+!frontend/package-lock.json
+
+# Maven
+
+/target
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Local Configuration ###
+.env
